--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -87,7 +87,7 @@ a {
 }
 body {
   font-family: "Noto Sans CJK JP", sans-serif;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 16px;
   color: $letter-color;
   line-height: calc(30 / 16);
