画面右端のfixed-linkを実装

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -48,3 +48,21 @@
         }
     }
 }
+.fixed-link {
+    position: fixed;
+    top: calc-percent(351, 700);
+    right: calc-percent(25, 1440);
+    filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
+    display: grid;
+    grid-template: repeat(2, auto) / auto;
+    row-gap: 8px;
+    z-index: 5;
+    &__item {
+        width: 41px;
+        height: 41px;
+        & * {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
