--- a/style.css
+++ b/style.css
@@ -269,6 +269,31 @@ body {
   transition: 0.3s;
 }
 
+.fixed-link {
+  position: fixed;
+  top: 50.14286%;
+  right: 1.73611%;
+  -webkit-filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
+          filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (auto)[2];
+  -ms-grid-columns: auto;
+      grid-template: repeat(2, auto)/auto;
+  row-gap: 8px;
+  z-index: 5;
+}
+
+.fixed-link__item {
+  width: 41px;
+  height: 41px;
+}
+
+.fixed-link__item * {
+  width: 100%;
+  height: 100%;
+}
+
 .burger__switch {
   -webkit-transform: translateX(-100vw);
           transform: translateX(-100vw);
