--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,7 @@
 // 変数
 $primary-color: #234cb5;
 $secondary-color: #0c1b67;
+$tertiary-color: #2a57cd;
 $letter-color: #333333;
 
 $header-height: 120px;
@@ -108,6 +109,31 @@ body {
   }
   .button:hover {
     border: 1px solid #fff;
+  }
+}
+
+.page-title {
+  // ローカル変数
+  $page-title-height: 297px;
+
+  font-size: 50px;
+  color: #fff;
+  background: linear-gradient(101deg, $tertiary-color 0%, #1f44a2 100%);
+  height: $page-title-height;
+  padding-left: calc(#{outside-inner-width(pc)} + 19px);
+  position: relative;
+  display: flex;
+  align-items: center;
+  &::after {
+    content: "";
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 $page-title-height calc-vw(895);
+    border-color: transparent transparent #f9f9f9 transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
 
