--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -61,9 +61,15 @@ $break-points: (
 @mixin aspect-ratio-child {
   position: absolute;
   width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
+}
+// 子要素のimageのサイズを親要素に合わせる
+@mixin img100 {
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @function outside-inner-width($responsive) {
@@ -100,7 +106,7 @@ body {
 
 .section-blue {
   color: #fff;
-  background-color: $primary-color;
+  background: linear-gradient($tertiary-color 0%, #1f44a2 100%);
   .section-title {
     &::before,
     &::after {
@@ -162,6 +168,29 @@ body {
     width: 1px;
     height: 35px;
     bottom: -59px;
+  }
+}
+
+.page-section-title {
+  font-weight: bold;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #707070;
+  position: relative;
+  &--about {
+    font-size: 30px;
+    line-height: calc(44 / 30);
+  }
+  &--plans {
+    font-size: 40px;
+    line-height: calc(58 / 40);
+  }
+  &::after {
+    content: "";
+    width: calc-percent(525,1200);
+    border-bottom: 1px solid $primary-color;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
   }
 }
 
