--- a/src/scss/_index.scss
+++ b/src/scss/_index.scss
@@ -1,13 +1,13 @@
 .top {
     background-color: #f9f9f9;
-    height: calc(100vh - #{$header-height});
+    height: 578px;
     position: relative;
     &::after {
         content: "";
         width: 0;
         height: 0;
         border-style: solid;
-        border-width: 0 0 calc(100vh - #{$header-height}) calc-vw(1066);
+        border-width: 0 0 578px calc-vw(1066);
         border-color: transparent transparent $primary-color transparent;
         position: absolute;
         top: 0;
